Implement PHASE 1 & 2: Figure positioning, validation, and auto-save
PHASE 1A: Figure Positioning
- Add _get_figure_handles() helper to track figure handles
- Add _detect_new_figures() to identify newly created figures
- Add _position_figures_cascade() to position figures on screen
- Modify execute() to automatically detect and position figures
- Update execute_matlab_code tool description to inform about auto-positioning
- Update output formatting to display figure creation info

PHASE 1B: Validation & Failure Detection
- Add _check_matlab_warnings() to capture MATLAB warnings via lastwarn
- Add _classify_warning_severity() to categorize warnings (critical/warning/info)
- Add _validate_figure_content() to detect blank/empty figures
- Integrate comprehensive validation into execute() method
- Update server output formatting with detailed validation results
- Critical warnings (singular matrix, etc.) now cause execution to fail

PHASE 2A: Auto-Save Script Functionality
- Add _auto_save_script() method to save scripts with metadata
- Add auto-save configuration to __init__ (auto_save_scripts, auto_save_mode)
- Update .env.example with all new configuration options
- Integrate auto-save into execute() with configurable modes (always/on_figures/never)
- Scripts saved to workspace_dir/scripts/ with timestamp filenames
- Script headers include validation results and metadata

PHASE 2B: Validation Enhancement
- Validation comprehensively integrated throughout execute()
- Validation results include warnings, figure checks, and issue tracking
- Script saving includes validation metadata in file headers
- Configuration options added for validation settings

Configuration Options Added:
- MATLAB_AUTO_POSITION (true/false)
- MATLAB_POSITION_STRATEGY (cascade/tile/center)
- MATLAB_AUTO_SAVE_SCRIPTS (true/false)
- MATLAB_AUTO_SAVE_MODE (always/on_figures/never)
- MATLAB_VALIDATE_RESULTS (true/false)
- MATLAB_CHECK_WORKSPACE_HEALTH (true/false)
- MATLAB_STRICT_VALIDATION (true/fal

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,30 @@ MATLAB_WORKSPACE_DIR=./matlab_workspace
 
 # Optional: Default figure export resolution (DPI)
 MATLAB_FIGURE_DPI=300
+
+# Figure Positioning
+# Auto-position figures when created (true/false)
+MATLAB_AUTO_POSITION=true
+
+# Figure positioning strategy (cascade/tile/center)
+MATLAB_POSITION_STRATEGY=cascade
+
+# Script Auto-Save
+# Auto-save executed scripts (true/false)
+MATLAB_AUTO_SAVE_SCRIPTS=true
+
+# When to save scripts (always/on_figures/never)
+# always: Save every executed script
+# on_figures: Only save scripts that create figures
+# never: Don't auto-save (manual save only)
+MATLAB_AUTO_SAVE_MODE=on_figures
+
+# Validation
+# Validate execution results (check for blank figures, warnings, etc.)
+MATLAB_VALIDATE_RESULTS=true
+
+# Report NaN/Inf in workspace variables as warnings
+MATLAB_CHECK_WORKSPACE_HEALTH=false
+
+# Treat critical warnings as errors (singular matrix, etc.)
+MATLAB_STRICT_VALIDATION=false
