--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,3 +30,8 @@ target-version = ['py311']
 [tool.ruff]
 line-length = 100
 target-version = "py311"
+
+[tool.ruff.lint]
+# Ignore E402 (module level import not at top) in server.py because we need to load .env first
+ignore = []
+per-file-ignores = {"server.py" = ["E402"]}
